[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/LevelMenu/TextureButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Level Menu/LevelMenu.gd" type="Script" id=3]

[node name="LevelMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Levels" type="GridContainer" parent="."]
margin_left = 76.0
margin_top = 70.0
margin_right = 564.0
margin_bottom = 270.0
custom_constants/vseparation = 101
custom_constants/hseparation = 106
columns = 5

[node name="Level1" type="Control" parent="Levels"]

[node name="TextureButton" parent="Levels/Level1" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level1"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"

[node name="Level2" type="Control" parent="Levels"]
margin_left = 106.0
margin_right = 106.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level2" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level2"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Control" parent="Levels"]
margin_left = 212.0
margin_right = 212.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level3" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level3"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level4" type="Control" parent="Levels"]
margin_left = 318.0
margin_right = 318.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level4" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level4"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level5" type="Control" parent="Levels"]
margin_left = 424.0
margin_right = 424.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level5" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level5"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level6" type="Control" parent="Levels"]
margin_top = 101.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level6" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level6"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level7" type="Control" parent="Levels"]
margin_left = 106.0
margin_top = 101.0
margin_right = 106.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level7" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level7"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level8" type="Control" parent="Levels"]
margin_left = 212.0
margin_top = 101.0
margin_right = 212.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level8" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level8"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level9" type="Control" parent="Levels"]
margin_left = 318.0
margin_top = 101.0
margin_right = 318.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level9" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level9"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level10" type="Control" parent="Levels"]
margin_left = 424.0
margin_top = 101.0
margin_right = 424.0
margin_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" parent="Levels/Level10" instance=ExtResource( 2 )]

[node name="Strokes" type="Label" parent="Levels/Level10"]
margin_left = -1.0
margin_top = 64.0
margin_right = 66.0
margin_bottom = 78.0
text = "Score: 0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 450.0
margin_top = 300.0
margin_right = 570.0
margin_bottom = 332.0
text = "BACK"

[node name="Random" type="Button" parent="."]
margin_left = 200.0
margin_top = 300.0
margin_right = 440.0
margin_bottom = 332.0
text = "PLAY RANDOMLY GENERATED LEVEL"

[node name="Reset" type="Button" parent="."]
margin_left = 70.0
margin_top = 300.0
margin_right = 190.0
margin_bottom = 332.0
text = "RESET PROGRESS"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
margin_right = 706.0
margin_bottom = 415.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetYes" type="Button" parent="CanvasLayer/Control"]
margin_left = 104.0
margin_top = 130.0
margin_right = 296.0
margin_bottom = 208.0
text = "RESET MY PROGRESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetNo" type="Button" parent="CanvasLayer/Control"]
margin_left = 344.0
margin_top = 130.0
margin_right = 536.0
margin_bottom = 208.0
text = "CANCEL"

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Random" to="." method="_on_Random_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ResetYes" to="." method="_on_ResetYes_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/ResetNo" to="." method="_on_ResetNo_pressed"]
